--- a/budget-react/src/index.css
+++ b/budget-react/src/index.css
@@ -6,13 +6,32 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.Show2{
+  text-align: center;
+  font-size: 30px;
+}
+.showButton{
+  font-size: 25px;
+}
+.btn{
+  font-size: 20px;
+  margin-left: 5px;
+  border-radius: 30px;
+}
+.info{
+  margin-top: -110px;
+  margin-right: 425px;
+  float: right;
+}
 .nav{
   background-color: aquamarine;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   box-shadow: 2px 2px 4px black;
+}
+.indexinfo{
+  margin-left: 10px;
 }
 .link{
    font-size: 40px;
@@ -30,12 +49,40 @@ code {
     monospace;
 }
 .table{
-  margin: auto;
-  margin-left: 60px;
-}
-td {
   text-align: center;
+  margin-left: 160px;
+} 
+.income{
+  margin-left: 85px;
 }
 .mybank{
-  margin-left: 250px;
+  text-align: center;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.input{
+  font-size: 20px;
+}
+.checkbox{
+  height: 20px;
+  width: 20px;
+}
+.btnform{
+  width: 150px;
+  font-size: 20px;
+  margin: auto;
+  border-radius: 5px;
+}
+.btnform:hover{
+  color: blue;
+  transition: all 1.3s;
+}
+.newtrans{
+  margin-left: 20px;
 }
