--- a/budget-react/src/index.css
+++ b/budget-react/src/index.css
@@ -6,83 +6,177 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
 .Show2{
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 .showButton{
-  font-size: 25px;
+  font-size: 10px;
 }
 .btn{
-  font-size: 20px;
+  font-size: 13px;
   margin-left: 5px;
   border-radius: 30px;
 }
 .info{
-  margin-top: -110px;
-  margin-right: 425px;
+  margin-top: -63px;
+  margin-right: 95px;
   float: right;
 }
 .nav{
-  background-color: aquamarine;
+  background-color: rgb(57, 196, 247);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   box-shadow: 2px 2px 4px black;
+  transition: all 2s;
 }
 .indexinfo{
   margin-left: 10px;
+  text-decoration: underline;
 }
 .link{
-   font-size: 40px;
+   font-size: 30px;
+   transition: all 2s;
 }
 .link2{
-  font-size: 35px;
+  font-size: 25px;
+  transition: all 2s;
 }
 .title{
   color: red;
   text-decoration: none;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 .table{
   text-align: center;
-  margin-left: 300px;
+  /* margin-left: 10px; */
 } 
 .income{
-  margin-left: 120px;
+  margin-left: 70px;
 }
 .mybank{
   text-align: center;
+  font-size: 20px;
 }
 .form{
   display: flex;
   flex-direction: column;
-  margin-left: 30px;
-  margin-right: 30px;
-  font-size: 25px;
-  margin-bottom: 20px;
+  margin-left: 25px;
+  margin-right: 25px;
+  padding: 15px;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
 .input{
-  font-size: 20px;
+  font-size: 15px;
+  padding: 15px;
 }
 .checkbox{
-  height: 20px;
-  width: 20px;
+  height: 10px;
+  width: 10px;
 }
 .btnform{
-  width: 150px;
-  font-size: 20px;
+  width: 120px;
+  font-size: 13px;
   margin: auto;
   border-radius: 5px;
 }
 .btnform:hover{
-  color: blue;
+  color: rgb(19, 133, 210);
   transition: all 1.3s;
 }
 .newtrans{
   margin-left: 20px;
+  font-size: 20px;
+}
+@media(max-width:800px) and (min-width: 600px){
+  body{
+    width: 100%;
+   
+  }
+}
+@media(orientation: landscape){
+  .Show2{
+    text-align: center;
+    font-size: 30px;
+  }
+  .showButton{
+    font-size: 25px;
+  }
+  .btn{
+    font-size: 20px;
+    margin-left: 5px;
+    border-radius: 30px;
+  }
+  .info{
+    margin-top: -110px;
+    margin-right: 425px;
+    float: right;
+  }
+  .nav{
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    box-shadow: 2px 2px 4px black;
+    transition: all 2s;
+  }
+  .indexinfo{
+    margin-left: 10px;
+    text-decoration: none;
+  }
+  .table{
+    text-align: center;
+    margin-left: 400px;
+  } 
+  .income{
+    margin-left: 120px;
+  }
+  .mybank{
+    text-align: center;
+    font-size: 35px;
+  }
+  .form{
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 20px;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .input{
+    font-size: 30px;
+    padding: 20px;
+  }
+  .checkbox{
+    height: 20px;
+    width: 20px;
+  }
+  .btnform{
+    width: 150px;
+    font-size: 20px;
+    margin: auto;
+    border-radius: 5px;
+  }
+  .btnform:hover{
+    color: blue;
+    transition: all 1.3s;
+  }
+  .newtrans{
+    margin-left: 20px;
+    font-size: 30px;
+  }
+  .link{
+    font-size: 40px;
+    transition: all 2s;
+ }
+ .link2{
+   font-size: 35px;
+   transition: all 2s;
+ }
 }
