--- a/budget-react/src/index.css
+++ b/budget-react/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(194, 194, 194, 0.856);
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -53,11 +54,12 @@ code {
 }
 .table{
   text-align: center;
-  /* margin-left: 10px; */
+  margin-left: 10px;
+  background-color: rgb(57, 196, 247);
 } 
-.income{
-  margin-left: 30px;
-}
+/* .income{
+  margin-left: 20px;
+} */
 .mybank{
   text-align: center;
   font-size: 20px;
@@ -94,13 +96,29 @@ code {
   font-size: 20px;
   text-decoration: underline;
 }
+.box{
+  border: 1px solid black;
+  border-radius: 5px;
+  justify-content: center;
+  width: 80px;
+}
+.color{
+  background-color: grey;
+}
+/* .page{
+  background-color: darkgray;
+} */
 @media(max-width:800px) and (min-width: 600px){
   body{
     width: 100%;
-   
+   height: 100%;
   }
 }
 @media(orientation: landscape){
+  body{
+    height: 100%;
+    background-color: (194, 194, 194, 0.856);
+  }
   .Show2{
     text-align: center;
     font-size: 30px;
@@ -132,11 +150,13 @@ code {
   }
   .table{
     text-align: center;
-    margin-left: 400px;
+    margin-left: 340px;
+    background-color: aquamarine;
   } 
-  .income{
-    margin-left: 110px;
-  }
+  /* .income{
+    margin-left: 30px;
+    text-align: center;
+  } */
   .mybank{
     text-align: center;
     font-size: 35px;
@@ -161,7 +181,7 @@ code {
   .btnform{
     width: 150px;
     font-size: 20px;
-    margin: auto;
+    /* margin: auto; */
     border-radius: 5px;
   }
   .btnform:hover{
@@ -181,4 +201,9 @@ code {
    font-size: 35px;
    transition: all 2s;
  }
+ .box{
+  border: 1px solid black;
+  width: 150px;
+}
+
 }
