--- a/budget-react/src/App.css
+++ b/budget-react/src/App.css
@@ -5,8 +5,9 @@
 
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  header {
+    position: fixed;
+    transition: App-logo-spin all 5s linear;
   }
 }
 
@@ -15,9 +16,9 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    margin-left: -450px;
   }
   to {
-    transform: rotate(360deg);
+    margin-left: 450px;
   }
 }
