--- a/budget-react/src/index.css
+++ b/budget-react/src/index.css
@@ -132,12 +132,13 @@ code {
     border-radius: 30px;
   }
   .info{
+    display: grid;
     margin-top: -110px;
-    margin-left: 425px;
+    margin-right: 600px;
     float: right;
     
   }
- 
+  
   .nav{
     background-color: aquamarine;
     display: flex;
